--- a/src/index.css
+++ b/src/index.css
@@ -11,24 +11,27 @@ body {
   align-items: center;
   height: 100vh;
   gap: 5rem;
+  background-color: #6b7280;
 }
 
 #player-content,
 #bot-content {
   display: grid;
-  background-color: red;
-  border: 2px solid black;
+  background-color: #d1d5db;
+  border: 2px solid #f3f4f6;
+  border-radius: 5px;
   height: 60vh;
   width: 30vw;
-
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
+  color: #374151;
+  font-size: 2rem;
 }
 
 #player-content div,
 #bot-content div {
   display: flex;
-  border: 1px solid black;
+  border: 1px solid #f3f4f6;
   align-items: center;
   justify-content: center;
 }
